--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "react": "^17.0.0",
+    "react-calendar": "^3.5.0",
     "react-dom": "^17.0.0"
   },
   "devDependencies": {
