--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "start": "node dist/index.js"
   },
   "dependencies": {
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "mongodb": "^4.2.0",
     "react": "^17.0.0",
     "react-calendar": "^3.5.0",
     "react-dom": "^17.0.0"
