--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "express": "^4.17.1",
     "mongodb": "^4.2.0",
     "react": "^17.0.0",
-    "react-calendar": "^3.5.0",
-    "react-dom": "^17.0.0"
+    "react-dom": "^17.0.0",
+    "react-modern-calendar-datepicker": "^3.1.6"
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
@@ -32,6 +32,7 @@
     "@storybook/react": "^6.4.0-rc.3",
     "@types/express": "^4.17.13",
     "@types/react": "^17.0.0",
+    "@types/react-calendar": "^3.4.3",
     "@types/react-dom": "^17.0.0",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
