--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
   "dependencies": {
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "history": "^5.1.0",
     "mongodb": "^4.2.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
-    "react-modern-calendar-datepicker": "^3.1.6"
+    "react-modern-calendar-datepicker": "^3.1.6",
+    "react-router-dom": "^6.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
